# QSMP

./: CMakeLists.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Documentation/: QSMP 1.2 Specification.docx  QSMP 1.2 Summary.docx  QSMP Specification 2021-08-15.docx  QSMP Specification 2021-09-01.docx  QSMP Specification 2021-09-02.docx  QSMP Specification.docx  Quantum Secure Messaging Protocol 2021-06-10.docx
QSMP/: QSMP DUPLEX.sln  QSMP SIMPLEX.sln  QSMP.sln  QSMP.vcxproj  client.c  client.h
QSMP Listener/: QSMP Listener.vcxproj.filters
QSMP Sender/: common.h
QSMP/QSC/: QSC.vcxproj  QSC.vcxproj.filters  acp.h  aes.c  aes.h  arrayutils.c  arrayutils.h  async.c  async.h  chacha.c  chacha.h  common.h  consoleutils.c  consoleutils.h  cpuidex.c  cpuidex.h  csg.c  csg.h  csp.h  csx.c  csx.h  dilithium.c  dilithium.h  dilithiumbase.c  dilithiumbase.h  dilithiumbase_avx2.c  dilithiumbase_avx2.h  donna128.c  donna128.h  ec25519.c  ec25519.h  ecdh.h  ecdhbase.h  ecdsa.h  ecdsabase.h  encoding.c  encoding.h  event.h  falconbase.c  falconbase.h  (+76 more)
QSMP/QSMP/: QSMP.vcxproj  QSMP.vcxproj.filters  common.h  connections.c  connections.h  kex.c  kex.h  keychain.c  keychain.h  logger.c  logger.h  qsmp.c  qsmp.h  qsmpclient.c  qsmpclient.h  qsmpserver.c  qsmpserver.h  server.c  server.h
QSMP/QSMP Client/: QSMP Client.suppress  QSMP Client.vcxproj  QSMP Client.vcxproj.filters  app.c  app.h  appclt.c  appclt.h  common.h  qsmp.c  qsmp.h  qsmpclient.c  qsmpclient.h
QSMP/QSMP Listener/: QSMP Listener.suppress  QSMP Listener.vcxproj  applnr.c  applnr.h  common.h
QSMP/QSMP Sender/: QSMP Sender.vcxproj  QSMP Sender.vcxproj.filters  appsdr.c  appsdr.h  common.h
QSMP/QSMP Server/: QSMP Server.vcxproj  QSMP Server.vcxproj.filters  app.c  app.h  appsrv.c  appsrv.h  common.h  qsmp.c  qsmp.h  qsmpserver.c  qsmpserver.h
Source/: QSMP DUPLEX.sln  QSMP SIMPLEX.sln
Source/Client/: QSMS Client.vcxproj  appclt.c  appclt.h
Source/QSMP/: QSMP.vcxproj  QSMP.vcxproj.filters  client.c  client.h  connections.c  connections.h  doxymain.h  kex.c  kex.h  logger.c  logger.h  qsmp.c  qsmp.h  qsmpcommon.h  server.c  server.h
Source/QSMP Client/: QSMP Client.vcxproj  QSMP Client.vcxproj.filters  appclt.c
Source/QSMP Listener/: QSMP Listener.vcxproj  QSMP Listener.vcxproj.filters  applnr.c
Source/QSMP Sender/: QSMP Sender.vcxproj  appsdr.c
Source/QSMP Server/: QSMP Server.vcxproj  appsrv.c  appsrv.h
Source/QSMS/: QSMS.vcxproj  QSMS.vcxproj.filters  client.c  client.h  connections.c  connections.h  doxymain.h  kex.c  kex.h  logger.c  logger.h  qsmpcommon.h  qsms.c  qsms.h  qsmscommon.h  server.c  server.h
Source/Server/: QSMS Server.vcxproj  appsrv.c  appsrv.h
Website/Work/: Doxyfile
Website/html/: classes.html  dir_c25c037fad2e3d3cc638e43d876bf730.js  navtreeindex0.js  structlistener__receiver__state.html  structqsmp__asymmetric__signature__keypair.html  structqsmp__client__verification__key.js  structqsmp__connection__set.html  structqsmp__kex__duplex__server__state.js  structqsmp__kex__simplex__client__state.js
Website/latex/: client_8h.tex  common_8h.tex  connections_8h.tex  files.tex  kex_8h.tex  kex_8h_source.tex  refman.tex  server_8h.tex  structqsmp__asymmetric__signature__keypair.tex
docs/: client_8h.html  connections_8h.html  doxygen_crawl.html  doxymain_8h_source.html  files_dup.js  index.html  index.js  kex_8h.html  kex_8h_source.html  logger_8h.html  logger_8h_source.html  navtreedata.js  navtreeindex0.js  qsmp_8h.html  qsmp_8h_source.html  server_8h.html  server_8h_source.html  structqsmp__connection__state.html  structqsmp__connection__state.js  structqsmp__keep__alive__state.js  structqsmp__kex__simplex__server__state.js  structqsmp__network__packet.js
(+183 files in other folders)
